<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MeetUp</string>
    <string name="package_name">starry.wallet</string>
    <string name="message_notnull">不能为空</string>
    <string name="progress_loading"> 加载中...</string>
    <string name="home_error_exit_press">再按一次退出程序</string>
    <string name="public_auto"> 自动</string>
    <string name="wallet_name">钱包名</string>
    <string name="receive_qr_code">收款码</string>
    <string name="copy_receive_address">复制收款地址</string>
    <string name="receive_balance">收款金额</string>
    <string name="wallet_send">转账</string>
    <string name="wallet_receive">收款</string>
    <string name="recent_records">最近交易记录</string>
    <string name="send">转</string>
    <string name="receive">收</string>
    <string name="w_send">转出</string>
    <string name="w_receive">收入</string>
    <string name="change_password">修改密码</string>
    <string name="change_name">修改钱包名</string>
    <string name="export_privatekey">导出私钥</string>
    <string name="export_keystore">导出Keystore</string>
    <string name="wallet_save">保存</string>
    <string name="wallet_about">关于我们</string>
    <string name="backup_mnemonic">备份助记词</string>
    <string name="backup_wallet">备份钱包</string>
    <string name="copy_your_mnemonic">抄写下你的钱包助记词</string>
    <string name="copy_your_privatekey">抄写下你的钱包私钥</string>
    <string name="copy_your_keystore">抄写下你的钱包Keystore</string>
    <string name="import_wallet">导入钱包</string>
    <string name="create_wallet">创建钱包</string>
    <string name="wallet_password">密码</string>
    <string name="wallet_confirm_passowrd">重复新密码</string>
    <string name="create_loading">正在创建</string>
    <string name="import_loading">正在导入</string>
    <string name="export_loading">正在导出</string>
    <string name="create_error">创建钱包失败,请检查网络</string>
    <string name="wallet_mnemonic">助记词</string>
    <string name="wallet_official">官方钱包</string>
    <string name="wallet_private_key">私钥</string>
    <string name="wallet_start_import">开始导入</string>
    <string name="keystore_placeholder">keystore文本内容</string>
    <string name="wallet_cancel">取消</string>
    <string name="wallet_confirm">确定</string>
    <string name="wallet_address">地址 ：</string>
    <string name="w_send_space">转出 ：</string>
    <string name="w_receive_space">收入 ：</string>
    <string name="wallet_time_space">时间 ：</string>
    <string name="password_hint">密码提示信息(可不填)</string>
    <string name="password_not_null">密码不能为空</string>
    <string name="password_not_match">重复密码与密码不一致,请重新输入</string>
    <string name="password_not_length">密码长度至少8位</string>
    <string name="input_mnemonic">请输入助记词</string>
    <string name="keystore_password">Keystore密码</string>
    <string name="name_not_null">请输入钱包名</string>
    <string name="mnemonic_placeholder">助记词，用空格分隔</string>
    <string name="import_mnemonic_error">导入钱包失败,请检查助记词或网络</string>
    <string name="keystore_official_placeholder">直接复制粘贴以太坊官方钱包keystore文件内容至输入框。</string>
    <string name="keystore_not_null">请输入keystore内容</string>
    <string name="keystore_input_password">请输入keystore密码</string>
    <string name="import_keystore_error">导入钱包失败,请检查keystore或密码</string>
    <string name="privatekey_placeholder">明文私钥</string>
    <string name="privatekey_not_null">请输入私钥</string>
    <string name="import_privatekey_error">导入钱包失败,请检查私钥或网络</string>
    <string name="export_privatekey_error">导出私钥错误，请检查密码或网络。</string>
    <string name="export_keystore_error">导出Keystore错误，请检查密码或网络。</string>
    <string name="current_password">当前密码</string>
    <string name="change_success">修改成功</string>
    <string name="change_fail">修改失败</string>
    <string name="complete_backup">是否已完成备份?</string>
    <string name="transfer_records">交易记录</string>
    <string name="input_password">输入密码</string>
    <string name="gas_price">矿工费 ：</string>
    <string name="send_address">发款方 ：</string>
    <string name="receive_address">收款方 ：</string>
    <string name="transfer_remarks">备    注 ：</string>
    <string name="remarks_no_space">备注</string>
    <string name="transfer_no">交易号 ：</string>
    <string name="block_num">区块 ：</string>
    <string name="transfer_time">时间 ：</string>
    <string name="wallet_copy">复制</string>
    <string name="copy_success">复制成功</string>
    <string name="copy_transfer_hash_success">复制交易号成功</string>
    <string name="receive_wallet_address">收款人钱包地址</string>
    <string name="send_amount">金额</string>
    <string name="wallet_commit">提交</string>
    <string name="input_receive_address">请输入收款人钱包地址</string>
    <string name="input_transfer_amount">请输入转账金额</string>
    <string name="input_trans_password">请输入密码</string>
    <string name="commit_success">提交成功</string>
    <string name="commit_fail">提交失败,请核对所填信息</string>
    <string name="manage_wallets">管理钱包</string>
    <string name="transaction_records">交易记录</string>
    <string name="delete_wallet">删除钱包</string>
    <string name="password_be_blank">密码不能为空</string>
    <string name="delete_caution">请谨慎,此操作无法撤销</string>
    <string name="load_eth_info_error">查询余额信息出错</string>
    <string name="delete_wallet_error">删除钱包出错,请检查密码或网络</string>
    <string name="name_not_change">未做任何修改</string>
    <string name="wallet_scan">扫一扫</string>
    <string name="own_self">多链创建钱包</string>
    <string name="intelligent_wallet">轻松管理资产</string>
    <string name="fast">快</string>
    <string name="slow">慢</string>
    <string name="wallet_sure">确认</string>
    <string name="wallet_next">下一步</string>

    <string name="password_important">密码用于保护私钥和交易授权，强度非常重要。</string>
    <string name="not_store_password">钱包不存储密码，也无法帮您找回，请务必牢记。</string>
    <string name="mnemonic_important">助记词用于恢复钱包或重置钱包密码，将它抄写到纸上，并存放在只有你知道的安全地方。</string>
    <string name="privatekey_important">安全警告 ：私钥未经加密，导出存在风险，建议使用助记词和Keystore进行备份。</string>
    <string name="keystore_important">请复制粘贴Keystore文件到安全离、离线的地方保存。切勿保存至邮箱、记事本、网盘、聊天工具等，非常危险。请勿通过网络工具传输Keystore文件，一旦丢失将造成不可挽回的资产损失。</string>



    <!--语言-->
    <string name="language_chinese">中文</string>
    <string name="language_english">English</string>

    <string name="sys_setting">系统设置</string>
    <string name="sys_language">语言</string>
    <string name="sys_unit">货币单位</string>
    <string name="sys_help">帮助中心</string>
    <string name="title_my">我的</string>
    <string name="title_wallet">管理钱包</string>
    <string name="title_wallet_change">切换钱包</string>
    <string name="title_sys_qrcode">将二维码/条码放入框内，即可自动扫描</string>
    <string name="title_copyat">\@2018 上海星翰达信息技术有限公司</string>
    <string name="input_mnemonic_error">格式错误</string>
    <string name="gas_price_value">矿工费 ：0.000000003</string>
    <string name="addressbook">联系人</string>
    <string name="add_addressbook">请添加联系人</string>
    <string name="name">姓名</string>
    <string name="mobile">手机号</string>
    <string name="email">邮箱</string>
    <string name="done">完成</string>
    <string name="message">消息</string>
    <string name="message_in">接收方：</string>
    <string name="message_out">转出方：</string>
    <string name="message_read_all">全部已读</string>
    <string name="title_transfer_detail">支付详情</string>
    <string name="title_edit">编辑</string>
    <string name="title_delete">删除</string>
    <string name="title_pwd_notice">密码提示</string>
    <string name="wallet_password_new">新密码</string>
    <string name="title_loading">请稍后...</string>
    <string name="title_transfer_loading">交易已发送，请稍后...</string>
    <string name="transfer_address_error">收款人地址有误</string>
    <string name="transfer_address_equals">收款人地址不能是自己</string>
    <string name="transfer_balance_error">余额不足</string>
    <string name="transfer_gas_error">需要足够的ETH来支付GAS费</string>
    <string name="wallet_import_error">导入失败</string>
    <string name="wallet_export_error">导出失败</string>
    <string name="title_get_error">获取信息失败</string>
    <string name="transfer_detail">支付详情</string>
    <string name="transfer_order">订单信息</string>
    <string name="transfer_to">转入地址</string>
    <string name="transfer_from">付款钱包</string>
    <string name="transfer_gas">矿工费</string>
    <string name="transfer_password">钱包密码</string>
    <string name="transfer_waiting">等待打包</string>
    <string name="transfer_error">打包失败</string>
    <string name="transfer_balance_current">当前余额</string>
    <string name="keystore_pwdhind">keystore密码</string>
    <string name="transfer_tryagain">重发</string>
    <string name="total_assets">总资产</string>
    <string name="password_forget">忘记密码 ?导入助记词或私钥可重置密码。</string>
    <string name="password_forget_import">马上导入</string>
    <string name="search_transaction">查询交易</string>
    <string name="network_error">当前未检测到网络，请检查设备网络</string>
    <string name="wallet_init_notice">多链一并生成的钱包，共用一套助记词，请注意保存和记录</string>
    <string name="wallet_import_notice">请注意先选择您钱包所在的平台链进行导入，否则将无法匹配到您正确的钱包</string>
    <string name="wallet_init_noticetitle">选择平台链（可多选）</string>
</resources>
