<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >
    <include layout="@layout/topbar"></include>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:layout_marginLeft="15dp"
       android:layout_marginRight="15dp"
       android:divider="@drawable/line"
       android:showDividers="middle|end">

       <RadioGroup
           android:id="@+id/radiogroup_linktype"
           android:layout_width="match_parent"
           android:layout_height="65dp"
           android:layout_marginLeft="30dp"
           android:layout_marginRight="30dp"
           android:orientation="horizontal"
           android:gravity="center_horizontal|bottom"
           android:layout_marginBottom="10dp"
           >
           <RadioButton
               android:id="@+id/radio_btc"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="BTC"
               android:textSize="16sp"
               android:paddingLeft="7dp"
               android:layout_weight="1"
               android:textColor="@color/blue_5777e3"
               android:buttonTint="@color/blue_5777e3"
               />
           <RadioButton
               android:id="@+id/radio_eth"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="ETH"
               android:textSize="16sp"
               android:paddingLeft="7dp"
               android:checked="true"
               android:layout_weight="1"
               android:textColor="@color/blue_5777e3"
               android:buttonTint="@color/blue_5777e3"
               />
           <RadioButton
               android:id="@+id/radio_ela"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="ELA"
               android:paddingLeft="7dp"
               android:textSize="16sp"
               android:textColor="@color/blue_5777e3"
               android:layout_weight="1"
               android:buttonTint="@color/blue_5777e3"
               />

       </RadioGroup>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal"
    android:gravity="center">
    <EditText
        android:id="@+id/adress_name"
        android:hint="@string/name"
        android:textColorHint="@color/gray_999999"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/gray33_30_normal"
        android:background="@null"/>
</LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="50dp"
           android:orientation="horizontal"
           android:gravity="center">
           <EditText
               android:id="@+id/adress_address"
               android:hint="@string/receive_wallet_address"
               android:textColorHint="@color/gray_999999"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               style="@style/gray33_30_normal"
               android:background="@null"/>
           <ImageView
               android:id="@+id/adress_sys"
               android:src="@drawable/btn_sys"
               android:layout_width="20dp"
               android:layout_marginLeft="10dp"
               android:layout_height="wrap_content"
               android:adjustViewBounds="true"/>
       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="50dp"
           android:orientation="horizontal"
           android:gravity="center">
           <EditText
               android:id="@+id/adress_mobile"
               android:hint="@string/mobile"
               android:textColorHint="@color/gray_999999"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               style="@style/gray33_30_normal"
               android:background="@null"/>
       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="50dp"
           android:orientation="horizontal"
           android:gravity="center">
           <EditText
               android:id="@+id/adress_email"
               android:hint="@string/email"
               android:textColorHint="@color/gray_999999"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               style="@style/gray33_30_normal"
               android:background="@null"/>
       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="50dp"
           android:orientation="horizontal"
           android:gravity="center">
           <EditText
               android:id="@+id/adress_remark"
               android:hint="@string/remarks_no_space"
               android:textColorHint="@color/gray_999999"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               style="@style/gray33_30_normal"
               android:background="@null"/>
       </LinearLayout>
   </LinearLayout>
</LinearLayout>