<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/topbar"></include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:orientation="vertical"
            android:gravity="center"
            >
            <ImageView
                android:id="@+id/img_transer_state"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/qb_icon_yes"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                />
        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center|bottom"
                android:layout_margin="10dp">
                <TextView
                    android:id="@+id/tv_transfer_value"
                    android:text=""
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:maxWidth="200dp"
                    style="@style/gray33_70_normal"
                    android:textSize="25sp"/>
                <TextView
                    android:text=""
                    android:id="@+id/tv_transfer_token"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/line"/>
            <LinearLayout
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="8dp">
                    <TextView
                        android:text="@string/transfer_no"
                        style="@style/gray33_30_normal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/tv_txHash"
                        android:text=""
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/gray33_30_normal"
                        android:textColor="@color/green_21c3aa"/>
                </TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/line"/>
                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="8dp">
                    <TextView
                        android:text="@string/gas_price"
                        style="@style/gray33_30_normal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/tv_gas"
                        android:text=""
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/gray33_30_normal"/>
                </TableRow>


                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="8dp">
                    <TextView
                        android:text="@string/block_num"
                        style="@style/gray33_30_normal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/tv_block"
                        android:text=""
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/gray33_30_normal"/>
                </TableRow>
                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="8dp">
                    <TextView
                        android:text="@string/wallet_time_space"
                        style="@style/gray33_30_normal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/tv_age"
                        android:text="20 hrs 20 mins ago"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/gray33_30_normal"/>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="8dp">
                    <TextView
                        android:text="@string/transfer_remarks"
                        style="@style/gray33_30_normal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/tv_remarks"
                        android:text=""
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/gray33_30_normal"/>
                </TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/line"/>
                <ImageView
                    android:id="@+id/img_transfer_code"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    />
                <LinearLayout
                    android:id="@+id/btn_wallet_copy"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_shape_oval_blue"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:gravity="center">
                    <ImageView
                        android:src="@drawable/qb_icon_copy"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        />
                    <TextView
                        android:text="@string/wallet_copy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/white_30_normal"
                        android:layout_gravity="center"/>
                </LinearLayout>


            </LinearLayout>


        </LinearLayout>
    </ScrollView>


</LinearLayout>